# Synthetic-Data-Generation-System

./: .gitignore  README.md  main.py  pyproject.toml
agents/: code_writer.py  orchestrator.py  planner.py  validator.py
core/: models.py
db/: store.py
examples/: banking_schema.json
tests/: test_store.py
tools/: native_tools.py
