[project]
name = "synth-data-gen"
version = "0.1.0"
description = "Multi-agent synthetic data generation pipeline using Pydantic AI"
requires-python = "==3.12.*"
dependencies = [
    "pydantic-ai-slim[anthropic]>=1.95.1",
    "pydantic-ai-harness[code-mode]>=0.2.0",
    "faker>=24.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
